2019-12-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc,
	  src/z80/main.c:
	  Improve use of sbc hl, rr in comparisons, part of RFE #641.

2019-12-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve <<, part of RFE #639.

2019-12-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/literalop.c:
	  Avoid testing for undefined behaviour that happens to be implementation-defined in GCC, but not clang.

2019-12-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClospre.cc:
	  Improve handling of ADDRESS_OF.
	* support/regression/tests/bug-2957.c:
	  Test for bug #2957.
	* src/pdk/gen.c,
	  support/regression/tests/bug-2959.c,
	  support/regression/tests/bug-2958.c:
	  Fix bugs #2959, #2958.

2019-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Make preprocessor guards compatible with default setting of clang-9.

2019-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2956.c:
	  Fix bug #2956.

2019-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Fix bug #2953.

2019-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Fix bug #2954.

2019-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Revert previous syntax error on multiple data types commit, since it broke __at (which in SDCC is a type specifier).

2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Allow C2X attribute declarations and attribute arguments.

2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Reorganize grammar by appendix A.2 of C2X.

2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Allow C2X attributes on statements.
